--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
     --text-color: #DBE4EF;
-    --card-front-color: #144480;
+    --card-front-color: #111110;
     --card-back-color: #00F4BF;
 }
 
@@ -11,6 +11,10 @@ body {
 
 #container {
     display: flex;
+     flex-wrap: wrap;
+     justify-content: space-between;
+     padding: 4rem;
+     gap: 3rem;
 }
 
 .cartao {
