--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ body {
     margin-top: 1rem;
     padding: 2rem;
     margin-top: 4rem;
+    font-size: 1.4vw;
 }
 
 .cartao__conteudo__pergunta p {
@@ -71,10 +72,13 @@ body {
     position: absolute;
     height: 100%;
     width: 100%;
+    box-sizing: border-box;
 }
 
 .cartao__conteudo__resposta {
     transform: rotateY(180deg);
+    background-color:rdba(0, 244, 191, 0.2);
+    border: 4px soid var(--card-back-color);
 }
 
 footer {
